--- a/.github/workflows/AutoReleaseDocker.yml
+++ b/.github/workflows/AutoReleaseDocker.yml
@@ -1,66 +1,33 @@
-name: docker_publish
+name: "Build and push docker image to ghcr.io"
 
-# Controls when the action will run.
 on:
-  # Triggers the workflow on push or pull request events but only for the master branch
   push:
-    branches:
-      - 'master'
     tags:
-      - 'v*'
-  pull_request:
-    branches:
-      - 'master'
+      - "*"
 
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  build-and-push:
-    # The type of runner that the job will run on
+  Deploy:
     runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-        with:
-          submodules: true
-
-      - name: Docker meta
-        id: meta
-        uses: docker/metadata-action@v3
-        with:
-          images: ${{ secrets.DOCKERHUB_USERNAME }}/${{ github.event.repository.name }},ghcr.io/${{ github.repository }}
-          flavor: |
-            latest=${{ github.ref == 'refs/heads/master' }}
-            prefix=
-            suffix=
-      # Create a Access Token and save it as as Actions secret
-      # https://hub.docker.com/settings/security
-      # DOCKERHUB_USERNAME
-      # DOCKERHUB_TOKEN
-      - name: Login to DockerHub
-        uses: docker/login-action@v1
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-      # Create a Access Token with `read:packages` and `write:packages` scopes
-      # CR_PAT
+      - name: Checkout Code
+        uses: actions/checkout@v1
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v1
         with:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
-          password: ${{ secrets.CR_PAT }}
-
-      - name: Build and push
+          password: ${{ secrets.REGISTRY_TOKEN }}
+      # Parse version from tag in GITHUB_REF
+      - name: Get the version
+        id: get_version
+        run: echo ::set-output name=VERSION::${GITHUB_REF#refs/tags/}
+      - name: downcase repository name
+        run: |
+          echo "REPO=${GITHUB_REPOSITORY,,}" >>${GITHUB_ENV}
+      - name: Build and Push Docker Image
         uses: docker/build-push-action@v2
         with:
-          context: .
           push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+          tags: |
+            ghcr.io/${{ env.REPO }}:${{ steps.get_version.outputs.VERSION }}
+            ghcr.io/${{ env.REPO }}:latest
